--- a/src/style.css
+++ b/src/style.css
@@ -37,3 +37,78 @@ code {
   font-size: 24px;
   color: #777777;
 }
+
+@media only screen and (min-width: 1500px) {
+  .big-align-center {
+    text-align: center;
+  }
+
+  .big-content-center {
+    justify-content: center;
+  }
+
+  .big-margin-auto {
+    margin: auto;
+  }
+}
+
+@media only screen and (max-width: 1024px) {
+  .small-hidden {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .small-gap-0 {
+    gap: 0px !important;
+  }
+
+  .small-column {
+    flex-direction: column !important;
+  }
+
+  .small-width-100 {
+    width: 100% !important;
+  }
+
+  .small-height-50 {
+    height: 50px !important;
+  }
+
+  .small-input {
+    width: 100px !important;
+    padding: 0px !important;
+  }
+
+  .small-button {
+    padding: 3px 2px !important;
+  }
+
+  .small-border {
+    border: solid 1px !important;
+  }
+
+  .small-font-10 {
+    font-size: 10px !important;
+  }
+
+  .pt-24 {
+    padding-top: 10px !important;
+  }
+
+  .small-img img {
+    width: 25% !important;
+  }
+
+  .small-font-15 {
+    font-size: 15px !important;
+  }
+
+  .small-font-20 {
+    font-size: 20px !important;
+  }
+
+  iframe {
+    height: 650px !important;
+  }
+}
